--- a/blocks/post__navigation/_index.scss
+++ b/blocks/post__navigation/_index.scss
@@ -2,7 +2,8 @@
     position: sticky;
     top: -.5rem;
     z-index: 10;
-
+    float: left;
+    left: var(--padding);
 }
 
 .post__navigation {
@@ -39,19 +40,6 @@
     }
 
     a {
-
-        // &::before {
-        //     transition: all .3s;
-        //     // content: '';
-        //     width: .05rem;
-        //     width: .15rem;
-        //     height: 100%;
-        //     position: absolute;
-        //     left: -0.05rem;
-        //     top: 0;
-        //     // background-color: currentColor;
-        //     border-radius: 10px;
-        // }
 
         &.active,
         &:hover {
@@ -107,6 +95,7 @@
     color: var(--color-text-grey);
     padding: 0.4rem 1rem;
     position: relative;
+    text-transform: lowercase;
 }
 
 .post__navigation a.active {
@@ -120,6 +109,7 @@
         top: -.5rem;
         z-index: 10;
         width: calc(100vw - var(--padding));
+        margin-bottom: calc(4 * var(--padding));
     }
 
     .post__navigation {
