--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: row-reverse;
     flex-direction: row;
-    gap: calc(2 * var(--gap));
+    gap: calc(.5% + 1 * var(--gap));
 
     .single-post__meta__wrapper {
         padding-left: 2.5rem;
@@ -26,7 +26,7 @@
     display: flex;
     flex-direction: column;
     gap: 5rem;
-    width: 42rem;
+    width: 50%;
 }
 
 .post-card__big__content {
@@ -93,6 +93,7 @@
     gap: .3rem;
     margin-top: 0 !important;
     margin-bottom: 0 !important;
+
     &._mobile {
         padding: var(--padding);
     }
@@ -209,12 +210,13 @@
     height: 100%;
     z-index: 5;
 
-    width: calc(100% - 42rem);
+    width: calc(50% - 5px);
     aspect-ratio: 3/2;
 
     .f-carousel {
         overflow: hidden;
         height: 100%;
+
     }
 
     .f-carousel.has-dots {
@@ -335,7 +337,7 @@
             }
 
             .f-thumbs__track {
-                padding: 0;
+                padding: 1px;
                 align-items: center;
                 // flex-direction: column;
                 // width: fit-content;
@@ -353,6 +355,12 @@
         .f-thumbs__slide__button {
             width: 100%;
             height: fit-content;
+            --f-thumb-border-radius: 0;
+            --f-thumb-opacity: 1;
+        }
+
+        &.is-classic .is-nav-selected .f-thumbs__slide__button {
+            outline: 1px solid var(--color-link-hover);
         }
 
         .f-thumbs__slide__img {
