--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -291,8 +291,10 @@ h6 {
 
 h1 {
     font-weight: 500;
+    font-weight: 600;
     // font-size: 60px;
     font-size: var(--font-size-3);
+    font-size: var(--font-size-0);
 }
 
 h2 {
@@ -508,10 +510,12 @@ h6 {
     padding-left: var(--padding);
     padding-right: var(--padding);
 }
-._margin{
+
+._margin {
     margin-top: 1rem !important;
     margin-bottom: 1rem !important;
 }
+
 // Галерея
 .f-carousel {
     --f-carousel-slide-width: 100%;
@@ -908,7 +912,6 @@ figcaption {
 //     margin-top: 0;
 // }
 
-.single__title {}
 
 .list-style-none {
     li {
@@ -933,12 +936,6 @@ figcaption {
 
 
 
-.single__title-heading {
-
-    h1 {
-        max-width: 100%;
-    }
-}
 
 .pd_flex {
     display: flex;
@@ -990,48 +987,33 @@ figcaption {
 .single-page--v1 {
     .single__content {
         max-width: 100%;
-        margin-top: calc(16rem * 0.5);
+        margin-top: calc(6rem * 0.5);
         display: inline-block;
     }
 
-    .single__title-meta {
-        width: var(--width-50-parent-padding);
-        margin-left: var(--margin-width-50);
+    .single-post__meta__wrapper {
+        margin-top: calc(16rem * 0.5);
+        // width: var(--width-50-parent-padding);
+        // margin-left: var(--margin-width-50);
     }
 
-    .single__title {
-        width: 100%;
-        position: relative;
+  
 
-        .single__title-heading {
-            width: var(--width-50-parent-padding);
-            margin-right: 0;
-            margin-left: var(--margin-width-50);
-        }
 
-        .post-category {
-            position: absolute;
-            left: calc(-2 * var(--gap));
-            top: 0;
-        }
-    }
-
-    .single__title-img {
-        width: var(--width-100-parent-padding-bleed);
-        position: relative;
-        margin-top: calc(2 * var(--gap));
-
-        img {
-            width: 100%;
-            height: auto;
-            object-fit: cover;
-            aspect-ratio: 16/9;
-        }
-    }
-
+  
     .single-page__content {
-
+        .post-category {
+            position: relative;
+            writing-mode: initial;
+            margin-top: calc(var(--gap) * 0.7);
+    
+            * {
+                font-size: var(--font-size-0);
+            }
+        }
+        h1,
         p,
+        ul,
         h2,
         h3,
         h4,
@@ -1203,18 +1185,18 @@ figcaption {
     }
 
     .single-page--v1 {
-        .single__title {
-            .post-category {
-                left: calc(-1.2 * var(--gap));
-            }
 
+        
+
+        .single__content {
+            margin-top: 0;
+            // margin-top: calc(1 * var(--padding));
         }
 
         .single-page__content {
-            margin-top: calc(2 * var(--padding));
 
-            p,
-            h2,
+            p,h1,
+            h2,ul,
             h3,
             h4,
             h5,
@@ -1222,7 +1204,7 @@ figcaption {
                 width: 100%;
                 padding: 0 var(--padding);
                 margin-right: auto;
-                margin-left: auto;
+                margin-left: 0;
             }
 
             .wp-block-image,
@@ -1284,7 +1266,7 @@ figcaption {
 
     h1 {
         max-width: 100% !important;
-        margin-bottom: 1.5rem;
+        // margin-bottom: 1.5rem;
     }
 }
 
