--- a/blocks/post__navigation/_index.scss
+++ b/blocks/post__navigation/_index.scss
@@ -1,6 +1,6 @@
 .post__navigation-wrapper {
     position: sticky;
-    top: -.5rem;
+    top: 3rem;
     z-index: 10;
     float: left;
     left: var(--padding);
@@ -106,10 +106,11 @@
 @media screen and (max-width: 767px) {
     .post__navigation-wrapper {
         position: sticky;
-        top: -.5rem;
+        // top: -.5rem;
+        top: 0;
         z-index: 10;
         width: calc(100vw - var(--padding));
-        margin-bottom: calc(4 * var(--padding));
+        margin-bottom: calc(2 * var(--padding));
     }
 
     .post__navigation {
