--- a/blocks/section__single-post__meta/_index.scss
+++ b/blocks/section__single-post__meta/_index.scss
@@ -1,9 +1,6 @@
 .single-post__meta__wrapper {
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    justify-content: space-between;
+    display: block;
 }
 
 .post-category {
@@ -26,13 +23,7 @@
 }
 
 .post__meta {
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    flex-direction: column;
-    text-align: left;
     height: fit-content;
-    width: calc(100% - .5 * var(--grid-gap));
 
     * {
         // color: var(--color-secondary);
