--- a/blocks/section__post-list__big/_index.scss
+++ b/blocks/section__post-list__big/_index.scss
@@ -5,6 +5,7 @@
     // padding-bottom: 15rem;
     padding-bottom: 0;
     padding-top: 0;
+    padding-bottom: calc(var(--padding) * 2);
 
     .post-card__big {
         &:not(:first-child) {
@@ -69,6 +70,9 @@
 @media screen and (max-width: 1220px) {}
 
 @media screen and (max-width: 767px) {
+.section__post-list__big__wrapper {
+    padding-bottom: 0;
+}
     .section__post-list__big {
         padding: 0;
     }
