--- a/components/footer/footer.scss
+++ b/components/footer/footer.scss
@@ -55,7 +55,7 @@
     align-items: flex-start;
 
     * {
-        color: var(--color-text-grey);
+        color: var(--color-black);
         font-size: var(--font-size--1);
     }
 }
@@ -102,7 +102,7 @@
     * {
         font-size: var(--font-size--1);
         font-weight: 400;
-        color: var(--color-text-grey);
+        color: var(--color-black);
     }
 }
 
