--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -340,6 +340,7 @@ h1,
     --large-margin: 16rem;
     /* Большой отступ */
     --medium-margin: calc(16rem * 0.75);
+    --medium-margin: 9rem;
     /* Средний отступ (75%) */
     --small-margin: calc(16rem * 0.5);
     --small-margin: calc(var(--font-size-0) * 9);
@@ -351,6 +352,8 @@ h2 {
     --large-margin: 16rem;
     /* Большой отступ */
     --medium-margin: calc(16rem * 0.75);
+    --medium-margin: 9rem;
+
     /* Средний отступ (75%) */
     --small-margin: calc(16rem * 0.5);
     --small-margin: calc(var(--font-size-0) * 9);
@@ -362,6 +365,8 @@ h3 {
     --large-margin: 16rem;
     /* Большой отступ */
     --medium-margin: calc(16rem * 0.75);
+    --medium-margin: 9rem;
+
     /* Средний отступ (75%) */
     --small-margin: calc(16rem * 0.5);
     --small-margin: calc(var(--font-size-0) * 7);
