--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -156,7 +156,7 @@ body {
             width: 5px;
         }
 
-        .more-content{
+        .more-content {
             height: fit-content !important;
         }
     }
@@ -256,9 +256,7 @@ a,
 
     width: fit-content;
     text-decoration: none;
-    // border-bottom: 1px solid currentColor;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.15);
-
+    // border-bottom: 1px solid rgba(0, 0, 0, 0.15);
     &:hover {
         // opacity: .8;
         color: var(--color-link-hover);
@@ -268,6 +266,10 @@ a,
             color: var(--color-link-hover) !important;
             border-color: var(--color-link-border-hover);
         }
+    }
+
+    &:link {
+        border-bottom: 1px solid rgba(0, 0, 0, 0.15);
     }
 }
 
@@ -318,13 +320,13 @@ h6,
     font-weight: 600;
     font-size: var(--font-size-0);
     text-transform: uppercase;
-    line-height: 110%;
+    line-height: 124%;
 
     a {
         font-size: var(--font-size-0);
         text-transform: uppercase;
         font-weight: 600;
-        line-height: 110%;
+        line-height: 124%;
     }
 }
 
@@ -1317,7 +1319,6 @@ figcaption {
             .img--large,
             .project-media-large {
                 box-shadow: none;
-                z-index: 0;
             }
 
             .post-category {
