--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -19,6 +19,9 @@ header {
         border-bottom: 0;
         font-size: var(--font-size--1);
     }
+    *:link{
+        border-bottom: 0;
+    }
 
     .out {
         transform: translateY(-100%);
