--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -52,9 +52,9 @@
     align-items: flex-start;
     max-width: 42rem;
 
-    * {
-        color: var(--color-text-primary);
-    }
+    // * {
+    //     color: var(--color-text-primary);
+    // }
 
     .single-post__meta__wrapper {
         margin-top: calc(2 * var(--font-size-0));
@@ -69,28 +69,23 @@
 }
 
 .post-card__big__title {
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    flex-direction: column;
-    gap: 10px;
+    // display: flex;
+    // align-items: flex-start;
+    // justify-content: flex-start;
+    // flex-direction: column;
+    // gap: 10px;
 }
 
 .post-card__big__heading {
     // font-weight: 600;
-    font-size: var(--font-size-0);
-    font-weight: var(--font-weight-medium);
-    line-height: var(--font-size-0);
+    // font-size: var(--font-size-0);
+    // font-weight: var(--font-weight-medium);
+    // line-height: var(--font-size-0);
     z-index: 10;
-    text-transform: uppercase;
+    // text-transform: uppercase;
 
-    color: var(--color-text-primary);
+    // color: var(--color-text-primary);
 
-    display: flex;
-    flex-direction: row;
-    align-content: center;
-    align-items: center;
-    gap: .3rem;
     margin-top: 0 !important;
     margin-bottom: 0 !important;
 
