--- a/components/post-card/post-card__feed/post-card__feed.scss
+++ b/components/post-card/post-card__feed/post-card__feed.scss
@@ -20,4 +20,8 @@
         
         overflow-wrap: anywhere;
     }
+    .post-card-img{
+        height: fit-content;
+        display: flex;
+    }
 }
